--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "simple-json-tool",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/kamyu1537/simple-json-tool.git",
+  "author": "Byeon Seongun <kamyu1537@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "prettier": "^1.19.1"
   },
